# LGAR-C

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  Phillipsburg_data1_PET.txt  Phillipsburg_data2_PET.txt  README.md  RUN.md  all.h  lgar_routines.c  linked_list.c  main.c  mem_funcs.c  soil_funcs.c  util_funcs.c  version.txt  xcategorize.c  xlgar  xshow.c
.github/workflows/: build_and_run_tests.yml  ngen_integration.yaml
bmi/: bmi.hxx
configs/: README.md  config_lasam.txt  config_lasam_Bushland.txt  config_lasam_Fort_Assiniboine.txt  config_lasam_Geneva.txt  config_lasam_Koptis_Farms.txt  config_lasam_Kukuihaele.txt  config_lasam_LHS_Geneva_1_layer.txt  config_lasam_LHS_Geneva_3_layer.txt  config_lasam_LHS_Koptis_Farms_1_layer.txt  config_lasam_LHS_Koptis_Farms_3_layer.txt  config_lasam_LHS_Kukuihaele_1_layer.txt  config_lasam_LHS_Kukuihaele_3_layer.txt  config_lasam_LHS_Onward_1_layer.txt  config_lasam_LHS_Onward_3_layer.txt  config_lasam_LHS_Phillipsburg.txt  config_lasam_LHS_Phillipsburg_3_layer.txt  config_lasam_Onward.txt  config_lasam_Phillipsburg.txt  config_lasam_Phillipsburg_ngen.txt  config_lasam_Phillipsburg_with_reservoir.txt  config_lasam_ngen.txt  config_lasam_sft_ngen.txt  config_lasam_synth_1.txt  config_lasam_synth_1_LGARTO.txt  config_lasam_synth_2_LGARTO.txt  config_lasam_synth_3.txt  config_lasam_synth_3_LGARTO.txt  config_lasam_synth_4_LGARTO.txt  realization_config_lasam.json  realization_config_lasam_macos.json  realization_config_lasam_sft.json  realization_config_lasam_smp.json  realization_config_lasam_smp_sft.json  test.txt
data/: README.md
doc/: RELEASE_MANAGEMENT.md
forcing/: Phillipsburg_data1_PET.txt  forcing_data_Fort_Assiniboine.txt  forcing_data_Phillipsburg.txt  forcing_data_Phillipsburg_ngen.txt  forcing_data_resampled_uniform_Geneva.txt  forcing_data_resampled_uniform_Koptis_Farms.txt  forcing_data_resampled_uniform_Kukuihaele.txt  forcing_data_resampled_uniform_Onward.txt  forcing_data_synth_1_LGARTO.txt  forcing_data_synth_2_LGARTO.txt  forcing_data_synth_3_LGARTO.txt  forcing_data_synth_4_LGARTO.txt
giuh/: giuh.c  giuh.h
include/: Logger.hpp  X_stuff.hxx  all.h  all.hxx  bmi_lgar.hxx
outputs/synthetic1/: data_layers.csv
outputs/synthetic3/: data_layers.csv
realizations/: README.md  realization_config_lasam.json  realization_config_lasam_sft.json  realization_config_lasam_sft_ngenCI.json  realization_config_lasam_smp.json  realization_config_lasam_smp_ngenCI.json
src/: Logger.cpp  aet.cxx  bmi_lgar.cxx  bmi_main_lgar.cxx  conceptual_reservoir.cxx  lgar.c  lgar.cxx  lgar_routines.c  linked_list.c  linked_list.cxx  main.c  main.cxx  mem_funcs.cxx  soil_funcs.cxx  util_funcs.cxx  xinitialize.cxx  xplot.c  xplot.cxx  xshow.cxx
test/: README.md  main_unit_test_bmi.cxx  run_synthetic.sh  run_unittest.sh
test/configs/: config_lasam_synthetic.txt  unittest.txt
tests/: LGARTO_demo.ipynb  README.md  generate_LASAM_parameter_sets_standalone_Koptis_Farms_3_layer.ipynb  lgarto_profile_animation_Geneva.ipynb  lgarto_profile_animation_Koptis_Farms.ipynb  lgarto_profile_animation_Kukuihaele.ipynb  lgarto_profile_animation_Onward.ipynb  lgarto_profile_animation_synth.ipynb  lgarto_profile_animation_synth_1.ipynb  lgarto_profile_animation_synth_2.ipynb  lgarto_profile_animation_synth_3.ipynb  lgarto_profile_animation_synth_4.ipynb  main_unit_test_bmi.cxx  plot_real_examples_LGARTO_Geneva.ipynb  plot_real_examples_LGARTO_Koptis_Farms.ipynb  plot_real_examples_LGARTO_Kukuihaele.ipynb  plot_real_examples_LGARTO_Onward.ipynb  plot_real_examples_LGARTO_synth_1.ipynb  plot_real_examples_LGARTO_synth_2.ipynb  plot_real_examples_LGARTO_synth_3.ipynb  plot_real_examples_LGARTO_synth_4.ipynb  plot_synthetic_examples.ipynb  run_synthetic.sh
tests/HYDRUS_outputs/synth_1_LGARTO/: T_Level_synth_1_LGARTO.txt
tests/HYDRUS_outputs/synth_2_LGARTO/: T_Level_synth_2_LGARTO.txt
tests/HYDRUS_outputs/synth_3_LGARTO/: T_Level_synth_3_LGARTO.txt
tests/HYDRUS_outputs/synth_4_LGARTO/: T_Level_synth_4_LGARTO.txt
tests/Python_outputs/synth_1/: output_synth_1.pkl
tests/configs/: config_lasam_synth_0.txt  config_lasam_synth_1.txt  config_lasam_synth_2.txt  config_lasam_synth_3.txt  unittest.txt
tests/outputs/Bushland/: data_layers.csv  data_variables.csv
tests/outputs/Bushland_LGARTO/: data_layers.csv  data_variables.csv
tests/outputs/Geneva/: data_variables.csv
tests/outputs/Koptis_Farms/: data_variables.csv
tests/outputs/Kukuihaele/: data_variables.csv
tests/outputs/Onward/: data_layers.csv  data_variables.csv
tests/outputs/Phillipsburg/: data_layers.csv  data_variables.csv
tests/outputs/Phillipsburg_LGARTO/: data_layers.csv  data_variables.csv
tests/outputs/synthetic1/: data_layers.csv  data_variables.csv
tests/outputs/synthetic1_LGARTO/: data_layers.csv  data_variables.csv
tests/outputs/synthetic2/: data_layers.csv  data_variables.csv
tests/outputs/synthetic2_LGARTO/: data_layers.csv  data_variables.csv
tests/outputs/synthetic3/: data_variables.csv
tests/outputs/synthetic3_LGARTO/: data_layers.csv  data_variables.csv
tests/outputs/synthetic4_LGARTO/: data_layers.csv  data_variables.csv
tests/stability/: generate_LASAM_parameter_sets_standalone_Geneva_1_layer.ipynb  generate_LASAM_parameter_sets_standalone_Geneva_3_layer.ipynb  generate_LASAM_parameter_sets_standalone_Koptis_Farms_1_layer.ipynb  generate_LASAM_parameter_sets_standalone_Koptis_Farms_3_layer.ipynb  generate_LASAM_parameter_sets_standalone_Kukuihaele_1_layer.ipynb  generate_LASAM_parameter_sets_standalone_Kukuihaele_3_layer.ipynb  generate_LASAM_parameter_sets_standalone_Onward_1_layer.ipynb  generate_LASAM_parameter_sets_standalone_Onward_3_layer.ipynb  generate_LASAM_parameter_sets_standalone_arid.ipynb  generate_LASAM_parameter_sets_standalone_arid_3_layer.ipynb
